--- a/components/layout/NavBar.module.scss
+++ b/components/layout/NavBar.module.scss
@@ -7,7 +7,6 @@
   align-items: baseline;
   justify-content: space-between;
   margin-top: 2rem;
-  padding: 0 10%;
 
   .pageLogo {
     font-family: $logo-font;
@@ -41,19 +40,30 @@
       margin-left: 2rem;
     }
 
+    li:nth-of-type(1) {
+      // margin-left: auto;
+      margin-right: 2rem;
+    }
+
     li:nth-of-type(5) {
       margin-left: 0.5rem;
     }
 
-    .socials {
+    .icons {
       a {
         font-size: 1.5rem;
         margin-left: 0.5rem;
       }
     }
 
+    .sports {
+      a {
+        margin-left: 1rem;
+      }
+    }
+
     a {
-      font-family: $link-font;
+      font-family: $bold-font;
       text-decoration: none;
       color: $primary-color;
 
