--- a/styles/sass/abstracts/_variables.scss
+++ b/styles/sass/abstracts/_variables.scss
@@ -1,5 +1,5 @@
 // Variables
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;500&family=Roboto+Slab:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;500&family=Roboto+Slab:wght@500&family=Shadows+Into+Light&display=swap');
 
 // Colours
 $primary-color: #262322; // Raisin Black
@@ -8,5 +8,7 @@ $highlight-color: #FF1053; // Radical Red
 
 // Typeface
 $logo-font: 'Oswald', sans-serif;
-$link-font: 'Roboto Slab', serif;
+$bold-font: 'Roboto Slab', serif;
 $primary-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+$mixel-font: 'Shadows Into Light', cursive;
