Updated sport news page requests

--- a/styles/sass/abstracts/_variables.scss
+++ b/styles/sass/abstracts/_variables.scss
@@ -6,6 +6,8 @@ $primary-color: #262322; // Raisin Black
 $complementary-color: #379634; // Slimy Green
 $highlight-color: #FF1053; // Radical Red
 
+$main-white: #FFFFFF;
+
 // Typeface
 $logo-font: 'Oswald', sans-serif;
 $bold-font: 'Roboto Slab', serif;
