Privacy policy updated

--- a/styles/sass/abstracts/_variables.scss
+++ b/styles/sass/abstracts/_variables.scss
@@ -1,16 +1,17 @@
 // Variables
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;500&family=Roboto+Slab:wght@500&family=Shadows+Into+Light&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;500&family=Roboto+Slab:wght@500&family=Rubik:ital,wght@0,300;0,400;1,300;1,400&family=Shadows+Into+Light&display=swap');
 
 // Colours
 $primary-color: #262322; // Raisin Black
 $complementary-color: #379634; // Slimy Green
 $highlight-color: #FF1053; // Radical Red
 
+
 $main-white: #FFFFFF;
 
 // Typeface
 $logo-font: 'Oswald', sans-serif;
 $bold-font: 'Roboto Slab', serif;
-$primary-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+$primary-font: 'Rubik', serif;
 
 $mixel-font: 'Shadows Into Light', cursive;
