Updates to SCSS

--- a/styles/sass/abstracts/_variables.scss
+++ b/styles/sass/abstracts/_variables.scss
@@ -1,5 +1,5 @@
 // Variables
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;500&family=Roboto+Slab:wght@500&family=Rubik:ital,wght@0,300;0,400;1,300;1,400&family=Shadows+Into+Light&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;500&family=Roboto+Slab:wght@500&family=Rubik:ital,wght@0,400;0,600;1,400&family=Shadows+Into+Light&display=swap');
 
 // Colours
 $primary-color: #262322; // Raisin Black
