--- a/styles/sass/base/_base.scss
+++ b/styles/sass/base/_base.scss
@@ -6,6 +6,7 @@ body {
   margin: 0;
   font-family: $primary-font;
   color: $primary-color;
+  font-weight: 400;
 }
 
 a {
@@ -22,4 +23,8 @@ h {
 
 * {
   box-sizing: border-box;
+}
+
+.strong {
+  font-weight: 600;
 }
