--- a/components/news/NewsItem.module.scss
+++ b/components/news/NewsItem.module.scss
@@ -32,16 +32,22 @@
   button {
     font: inherit;
     cursor: pointer;
-    color: $primary-color;
-    border: 1px solid $primary-color;
-    background-color: transparent;
+    background-color: $primary-color;
+    border: none;
     padding: 0.5rem 1.5rem;
-    border-radius: 4px;
+
+    a {
+      color: $highlight-color;
+    }
 
     &:hover,
     &:active {
-      color: $primary-color;
       background-color: $highlight-color;
+
+      a {
+        color: $primary-color;
+      }
     }
+
   }
 }
