--- a/components/ui/CardLayout.module.scss
+++ b/components/ui/CardLayout.module.scss
@@ -6,3 +6,22 @@
   gap: 2rem;
   justify-content: center;
 }
+
+
+@media screen and (max-width: 1600px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
