--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,21 +1,49 @@
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200;500&family=Roboto+Slab:wght@500&family=Rubik:ital,wght@0,400;0,600;1,400&family=Shadows+Into+Light&display=swap");
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: "Rubik", serif;
+  color: #262322;
+  font-weight: 400;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Roboto Slab", serif;
+  color: #379634;
+}
+
+h1 {
+  font-size: 4rem;
+  color: #FFFFFF;
+}
+h2 {
+  font-size: 2.2rem;
+  margin-top: 2rem;
+}
+h3 {
+  margin-top: 1.75rem;
+  font-size: 1.2rem;
 }
 
 * {
   box-sizing: border-box;
 }
 
-.container {
-  padding: 0 30px;
-  margin: 0 auto;
-  overflow: auto;
+.strong {
+  font-weight: 600;
+}
+
+.privacy {
+  color: #FF1053;
+  text-decoration: none;
 }
