--- a/components/layout/ScoreBoard.module.scss
+++ b/components/layout/ScoreBoard.module.scss
@@ -10,7 +10,7 @@
   }
 
   .about {
-    background: url('../../public/images/baseball-stadium.jpg') no-repeat center center/cover;
+    background: url('../../public/images/cricket-stadium.jpg') no-repeat center center/cover;
   }
 
   .contact {
@@ -34,7 +34,7 @@
   }
 
   .golf {
-    background: url('../../public/images/golf-course.jpg') no-repeat center center/cover;
+    background: url('../../public/images/golf.jpg') no-repeat center center/cover;
   }
 
   .motorsport {
