--- a/styles/sass/abstracts/_variables.scss
+++ b/styles/sass/abstracts/_variables.scss
@@ -1,17 +1,20 @@
 // Variables
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;500&family=Roboto+Slab:wght@500&family=Rubik:ital,wght@0,400;0,600;1,400&family=Shadows+Into+Light&display=swap');
+
+// Import Fonts
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,600;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+
 
 // Colours
 $primary-color: #262322; // Raisin Black
 $complementary-color: #379634; // Slimy Green
 $highlight-color: #FF1053; // Radical Red
-
-
 $main-white: #FFFFFF;
 
 // Typeface
 $logo-font: 'Oswald', sans-serif;
 $bold-font: 'Roboto Slab', serif;
 $primary-font: 'Rubik', serif;
-
 $mixel-font: 'Shadows Into Light', cursive;
