--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200;500&family=Roboto+Slab:wght@500&family=Rubik:ital,wght@0,400;0,600;1,400&family=Shadows+Into+Light&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,600;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap");
 html,
 body {
   padding: 0;
