Set back-up websafe fonts

--- a/styles/sass/abstracts/_variables.scss
+++ b/styles/sass/abstracts/_variables.scss
@@ -14,7 +14,7 @@ $highlight-color: #FF1053; // Radical Red
 $main-white: #FFFFFF;
 
 // Typeface
-$logo-font: 'Oswald', sans-serif;
-$bold-font: 'Roboto Slab', serif;
-$primary-font: 'Rubik', serif;
-$mixel-font: 'Shadows Into Light', cursive;
+$logo-font: 'Oswald', Trebuchet MS, sans-serif;
+$bold-font: 'Roboto Slab', Garamond, serif;
+$primary-font: 'Rubik', Courier New (monospace), serif;
+$mixel-font: 'Shadows Into Light', Brush Script MT, cursive;
