Updated Code Comments

--- a/styles/sass/abstracts/_variables.scss
+++ b/styles/sass/abstracts/_variables.scss
@@ -1,11 +1,10 @@
-// Variables
+// VARIABLES
 
 // Import Fonts
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,600;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
-
 
 // Colours
 $primary-color: #262322; // Raisin Black
